// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal /w show 1`] = `
<div
  class="Modalstyles__Fade-qtm414-0 fpWtmq"
>
  <div
    class="Modalstyles__Box-qtm414-1 fdRsdk"
  >
    <div
      class="Modalstyles__CloseIcon-qtm414-2 cychSA"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Modal 1`] = `
<div
  class="Modalstyles__Fade-qtm414-0 cqmfHd"
>
  <div
    class="Modalstyles__Box-qtm414-1 dnatgc"
  >
    <div
      class="Modalstyles__CloseIcon-qtm414-2 cychSA"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
  </div>
</div>
`;
